...
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: [
                      // Skip button
                      TextButton(
                        onPressed: _completeOnboarding,
                        child: Text(
                          'Skip',
                          style: TextStyle(
                            color: OnboardingData.pages[_currentPage].textColor,
                            fontSize: 16.0,
                          ),
                        ),
                      ),
...
